# utf-tech-foods-api

./: .gitignore  README.md  justfile  prek.toml  pyproject.toml
apps/menu/: admin.py  models.py  serializers.py  tests.py  views.py
apps/menu/migrations/: 0001_initial.py
apps/shared/: models.py
config/: settings.py  urls.py
