[project]
name = "utf-tech-foods-api"
version = "0.1.0"
description = "REST API for restaurant menu categories and published dishes using Django and DRF."
readme = "README.md"
authors = [ { name = "Vlad Korneev", email = "veenrok@veenrok.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=6.0.3",
  "django-debug-toolbar>=6.2",
  "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
  "django-stubs>=6.0.1",
]
git-hooks = [
  "prek>=0.3.8",
]
